// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cursorRulesUtils > cursorRuleCreationInstructions > should return consistent instructions for cursor rule creation (snapshot) 1`] = `
"## 
**Instructions:**
1. Change to the working directory: \`cd "/Users/test/project"\`
2. Run the bash script below (copy and execute the commands from the script)
3. This will create the cursor rules file at \`.cursor/rules/frontend-blade-rules.mdc\`
Run the following bash script to create cursor rules:
  

**Bash Script:**

\`\`\`bash

#!/bin/bash
# Download frontend-blade-rules.mdc from GitHub and save to .cursor/rules
TARGET_DIR=".cursor/rules"
URL="https://raw.githubusercontent.com/razorpay/blade/master/packages/blade-mcp/cursorRules/frontend-blade-rules.mdc"
FILE_PATH="$TARGET_DIR/frontend-blade-rules.mdc"
# Create directory if it doesn't exist (works even if it already exists)
mkdir -p "$TARGET_DIR"
curl -sSL "$URL" -o "$FILE_PATH"

\`
**Working Directory:** \`/Users/test/project\`
"
`;

exports[`cursorRulesUtils > cursorRuleCreationInstructions > should return consistent instructions with Windows-style path (snapshot) 1`] = `
"## 
**Instructions:**
1. Change to the working directory: \`cd "C:/Users/john/Documents/project"\`
2. Run the bash script below (copy and execute the commands from the script)
3. This will create the cursor rules file at \`.cursor/rules/frontend-blade-rules.mdc\`
Run the following bash script to create cursor rules:
  

**Bash Script:**

\`\`\`bash

#!/bin/bash
# Download frontend-blade-rules.mdc from GitHub and save to .cursor/rules
TARGET_DIR=".cursor/rules"
URL="https://raw.githubusercontent.com/razorpay/blade/master/packages/blade-mcp/cursorRules/frontend-blade-rules.mdc"
FILE_PATH="$TARGET_DIR/frontend-blade-rules.mdc"
# Create directory if it doesn't exist (works even if it already exists)
mkdir -p "$TARGET_DIR"
curl -sSL "$URL" -o "$FILE_PATH"

\`
**Working Directory:** \`C:/Users/john/Documents/project\`
"
`;

exports[`cursorRulesUtils > cursorRuleCreationInstructions > should return consistent instructions with different project paths (snapshot) 1`] = `
"## 
**Instructions:**
1. Change to the working directory: \`cd "/home/user/workspace/my-app"\`
2. Run the bash script below (copy and execute the commands from the script)
3. This will create the cursor rules file at \`.cursor/rules/frontend-blade-rules.mdc\`
Run the following bash script to create cursor rules:
  

**Bash Script:**

\`\`\`bash

#!/bin/bash
# Download frontend-blade-rules.mdc from GitHub and save to .cursor/rules
TARGET_DIR=".cursor/rules"
URL="https://raw.githubusercontent.com/razorpay/blade/master/packages/blade-mcp/cursorRules/frontend-blade-rules.mdc"
FILE_PATH="$TARGET_DIR/frontend-blade-rules.mdc"
# Create directory if it doesn't exist (works even if it already exists)
mkdir -p "$TARGET_DIR"
curl -sSL "$URL" -o "$FILE_PATH"

\`
**Working Directory:** \`/home/user/workspace/my-app\`
"
`;

exports[`cursorRulesUtils > cursorRuleCreationInstructions > should return consistent instructions with nested path (snapshot) 1`] = `
"## 
**Instructions:**
1. Change to the working directory: \`cd "/Users/alice/Desktop/blade-12/blade"\`
2. Run the bash script below (copy and execute the commands from the script)
3. This will create the cursor rules file at \`.cursor/rules/frontend-blade-rules.mdc\`
Run the following bash script to create cursor rules:
  

**Bash Script:**

\`\`\`bash

#!/bin/bash
# Download frontend-blade-rules.mdc from GitHub and save to .cursor/rules
TARGET_DIR=".cursor/rules"
URL="https://raw.githubusercontent.com/razorpay/blade/master/packages/blade-mcp/cursorRules/frontend-blade-rules.mdc"
FILE_PATH="$TARGET_DIR/frontend-blade-rules.mdc"
# Create directory if it doesn't exist (works even if it already exists)
mkdir -p "$TARGET_DIR"
curl -sSL "$URL" -o "$FILE_PATH"

\`
**Working Directory:** \`/Users/alice/Desktop/blade-12/blade\`
"
`;
